frontend/src/assets/css/App.css
/* ... */
.modal-content .btn-link {
  color: #b3b3b3;
  margin-right: 30px;
  border: 2px solid #666666;
  border-radius: 4px;
}
.modal-content .btn-link:focus, .modal-content .btn-link:hover {text-decoration: none}
.tiulo_nav{
  padding: 15px 0px;
}
.no_padding{ padding: 0px;  }
.divisor{
  /*border-top:2.02px solid #F5F5F5; */
  margin-bottom: 0.2rem;
}

.margin_abajo_big.form-group>textarea{
  height: 160px;
}

#Modal_open_menucopy .first a {
  padding-left: 5px
}
#Modal_open_menucopy .col-md-2 .nav {
  padding-top: 6px
}

#Modal_open_menucopy .nav{
  color: #1875F0;
  font-family: 'Roboto';
  font-size: 14px;
  font-weight: 500;
  line-height: 16px;
}
#Modal_open_menucopy .nav-link{
  color: #999999;
  font-family: 'Roboto';
  font-size: 12px;
  font-weight: 500;
  line-height: 40px;
  display: block;
}
/* Captcha */
.recaptcha > div>div{
  width: auto !important;
}

.recaptcha .grecaptcha-badge {
  position: static !important;
  box-shadow: none !important;
}

/*  */
select.location-selector {
  margin-bottom: 10px;
  color: #777;
  height: 40px;
}

.btn-default, .btn-primary {
  font-weight: 700;
}

/* tag input css */

.react-tags__selected {
  margin: 10px 0 20px;
  text-align: center;
}

.reason-tags, .react-tags__selected .react-tags__selected-tag {
  background-color: #868686;
  color: #fff;
  margin: 2px;
  height: 28px;
  border-radius: 4px;
  font-weight: 300;
  font-size: 12px;
}

.react-tags__selected .react-tags__selected-tag:after{
  content: "\f00d";
  font-family: FontAwesome;
  font-weight: 300;
  margin-left: 4px;
}

.react-tags__search-input input {
  width: 100% !important;
  height: 52px;
  color: #444;
  font-weight: 400;
  border: 2px solid #999;
}
.react-tags__suggestions {

  width: 95% !important;
  background-color: #ffffff;
  position: absolute;
  /*top: 100%;*/
  border: 1px solid #555555;
  z-index: 100
}

.react-tags__suggestions ul {
  font-weight: 400;
  color: #868686;
  list-style: none;
  padding: 0 .5em;
}

.react-tags__suggestions ul li {
  margin: 10px;
}
/* end tag input css */


/* Responsive  */
@media only screen and (min-width: 768px) and (max-width: 992px) {
  #head_politician{
    background-position: 60% center;
  }
  .modal-content form {padding: 0}
  footer .list-inline-item:not(:last-child) {margin-right: 50px}

}

@media only screen and (max-width: 767px) {
  .info .nav {font-size: 0;}
  .info .nav .nav-item {display: inline-block; margin:0; width: 50%;}
  footer .logo_header{
    text-align: center;
    width: 100%;
  }
  footer .list-inline-item:not(:last-child) {margin-right: 50px}
  footer .col-xs-12 .row {text-align: center !important;}
  .piter_footer,.item_footer {
    float: none; text-align: center; width: 100%; margin: 0;
    margin-bottom: 8px;
  }
}

@media only screen and (max-width: 600px) {
  .del_top{ display: none;  }

  a.link_second_menu{ display: block;  }

  .btn-see-more,.btn-see-more-primary{
    margin: 25px auto 40px;
    text-align: center;
    display: block;
    float: left;
    width: 100%;
  }
  .btn_circle{
    padding: 0.5rem 1.5rem;
  }
  #head_politician{
    background-position: 62% center;
  }
  .container .nav .nav-item {margin: 0 }
  .container .nav .nav-item a {
    font-size: 14px !important;
    padding: 10px 6px; margin-right: 0
  }
  .logo_header{
    padding: 0 25px;
  }
  .modal-content form {padding: 0}
}

.navbar {
  height: 80px;
}

.navbar .navbar-toggle {
  margin-top: 20px;
}

@media only screen and (max-width: 480px) {

  .navbar {
    background-color: #FFFFFF;
    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.05);
    margin: 0;
    border-bottom: 0;
    border-radius: 0;
  }

  .navbar-collapse.collapse.in {
    padding-bottom: 0;
  }

  .navbar .navbar-nav li a {
    color: #999;
    font: 400 16px/30px 'Roboto';
    padding: 0;
  }

  .how-it-work {
    padding: 0 20px;
  }

  .info .nav .nav-link {
    font-size: 10px;
  }

  footer .list-inline-item {
    margin: 0 10px !important;
  }

  footer .list-inline-item a {
    line-height: 40px; font-size: 14px;
  }

  .logo {
    width: 210px;
    padding: 0 10px;
    text-align: left;
  }

  .content_circle_blue {
    height: 100px; width: 100px
  }

  #politician-detail img {
    width: 200px;
  }

}

@media only screen and (max-width: 320px) {
  .main-menu .navbar-brand .main {
    font-size: 12px;
  }
  .main-menu .navbar-brand .logo {
    width: auto;
  }
}

@media only screen and (max-width: 420px) {

  .info .nav {
    width: 100%;
  }
  footer .list-inline-item {
    margin: 0 5px !important;
  }

  #politician-detail img {
    width: 180px;
  }
}

@media only screen and (max-width: 380px) {

  .info .nav .nav-link {
    font-size: 11px;
  }
  footer .list-inline-item a {
    font-size: 12px;
  }
  #Modal_open_how_works .modal-footer .go-gov-go {margin-left: -15px; float: none;}
  #Modal_open_how_works .modal-footer .government-simplifi {margin-left: -15px; float: none;}

  a.hover_black{
    display: block;
    position: relative;
    margin-bottom: 10px
  }
}

@media only screen and (max-width: 340px) {

  #politician-detail-bio-and-job-pane-1 {
    text-shadow: 0 1px 2px #000000;
  }

  #politician-detail img {
    width: 150px;
  }

}


/**
 * Mobile responsive design for jumbotron
 */

.r-tabs {
  margin: 0 20px 28px;
  border-bottom: 1px solid #ddd;
}

.r-item {
  display: inline-block;
  position: relative;
  top: 1px;
  color: #999;
  font-weight: 500;
  margin: 0 5px;
  padding: 8px;
}

.r-item:hover {
  color: #000;
}

.r-item:hover, .r-item:focus {
  text-decoration: none;
}

.r-item.approve.active {
  color: #2FA543;
  border-bottom: 2px solid #2FA543;
}

.r-item.disapprove.active {
  color: #D92D24;
  border-bottom: 2px solid #D92D24;
}
/* ... */

